[Style] Fix mobile scrolling cut off bug

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@ html {
   font-size: 16px;
   color: var(--font);
   background: var(--background);
+  overflow: visible;
 
   --background: #fafafa;
   --font: #636363;
@@ -26,6 +27,7 @@ html {
 
 body {
   height: 100%;
+  overflow: visible;
   margin: 0;
   font-family: "Ubuntu", "Open Sans", -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
@@ -175,6 +177,7 @@ span.chevron {
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: visible;
 }
 
 .tag {
